# moviedb

./: .env-default  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.agent/knowledge/: embedding-architecture.md  project-purpose.md
.agent/workflows/: dependency_management.md  setup.md
benchmark/: MLFLOW_BASELINE_GUIDE.md  README.md  export_baseline.py  import_baseline.py  query_recommends.py  user_recommends.py
benchmark/baseline/: README.md
benchmark/baseline/search_query/: experiment.json
benchmark/baseline/search_query/runs/395e4d97dff64a0ab7938ed345f5c184/: run.json
benchmark/baseline/user_recommends_evaluation/: experiment.json
benchmark/bench_configs/: netflix_nl.yaml
nginx/: moviedb.conf  server_shared.conf  streamlit_params.conf
scripts/: switch_db_branch.sh  test_analysis.py  test_explanation.py  test_search_weights.py
src/: streamlit_app.py
src/core/: settings.py
src/misc/: combine_jsons.py
src/misc/utils/: auth.py  embedding.py  version.py
src/movies/: admin.py  search.py
src/movies/management/commands/: build_embeddings.py  import_imdb.py  import_netflix.py  import_streaming_availability.py
src/movies/migrations/: 0002_motn.py  0003_userviewinteraction.py  0004_alter_userviewinteraction_rating_userrecommendation.py  0005_alter_userviewinteraction_options.py  0006_userquerylog.py  0007_motnshow_cast_embedding_and_more.py
src/movies/models/: __init__.py  imdb.py  motn.py  user.py
src/streamlit_app/: logger.py  main.py  styles.css
src/streamlit_app/pages/: home.py  login.py  netflix.py
(+8 files in other folders)
